Bug 20282 - implicit declaration of function ‘__get_user_bad’ on recent aarch64 kernel
Summary: implicit declaration of function ‘__get_user_bad’ on recent aarch64 kernel
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-21 10:02 UTC by Martin Cermak
Modified: 2016-06-21 18:17 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Cermak 2016-06-21 10:02:25 UTC
With kernel-4.5.0-0.40.el7.aarch64 kbuild fails thusly:

=======
Pass 3: translated to C into "/tmp/stapCJl99c/stap_355af5cf9305976cecf5dce2a13ff16c_53860_src.c" using 191104virt/82880res/6208shr/76096data kb, in 20usr/150sys/178real ms.
In file included from /usr/local/share/systemtap/runtime/linux/runtime.h:214:0,
                 from /usr/local/share/systemtap/runtime/runtime.h:26,
                 from /tmp/stapCJl99c/stap_355af5cf9305976cecf5dce2a13ff16c_53860_src.c:25:
/usr/local/share/systemtap/runtime/stp_string.c: In function ‘_stp_decode_utf8’:
/usr/local/share/systemtap/runtime/stp_string.c:73:2: error: implicit declaration of function ‘__get_user_bad’ [-Werror=implicit-function-declaration]
  if (_stp_deref_nofault(b, 1, buf, (user ? USER_DS : KERNEL_DS)))
  ^
cc1: all warnings being treated as errors
=======
Comment 1 David Smith 2016-06-21 18:17:54 UTC
Fixed in commit 8a99a64.