Fix PR20282 by updating loc2c-runtime.h for aarch64.

* runtime/linux/loc2c-runtime.h: Use BUILD_BUG() instead of
  __get_user_bad()/__put_user_bad() when available.